###
# This is a log of major user-visible changes in each MacPorts release.
# $Id$
###


Unreleased:

    - add configure.objc/objcflags for Objective-C

    - add optional build.nice (0) and build.jobs (1) modifiers (afb in r28634 & r28673)

    - make tclobjc1.0 compile with GNUstep and NXConstantString class (afb in r28668)

    - fix bsdmake/gnumake defaults for FreeBSD and Linux platforms (afb in r28660)

    - port lint command, for Portfile verification (afb, r28170)

    - add configure.macosx_deployment_target for configure flags

    - add configure.javac/classpath for Java

    - add configure.fflags/fcflags/f90flags for Fortran flags

    - Mark "python" group code as deprecated

    - Add group code for Python 3.0

    - Add more compiler suites for the 'configure.compiler' option

    - `port variants` behaves like `port info` in that it parses the Portfile for up-to-date info.
      `port variants` also supports the --index flag (eridius in r27919).

    - Fix upgrade to properly handle installed versions beginning with letters (eridius in r27900).

    - Chris Pickel's GSoC2007 work: registry2.0 & cregistry (mainly r27518 & r27520)

    - Eugene Pimenov's GSoC2007 work: Trace lib on unix sockets (r26682).

    - Elias Pipping's GSoC2007 work: merge.rb on his personal /users/pipping svn dir.


Release 1.5.2 (15-August-2007 at branches/release_1_5's r27896, by jmpp):

    - Fix mtree checks which inaccurately complained about files in /Applications, /Library & /Developer;
      mtree checks now also warn the user if a port indicates an intended violation and errors are
      temporarily non-fatal (mww & eridius in r27709, r27710, r27719, r27720 & r27773).


Release 1.5.1 (11-August-2007 at branches/release_1_5/base's r27646, by jmpp):

    - Remove sed rules taking care of dp based comments in the macports.conf file from the upgrade target in base/Makefile.in,